WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200325
WKImagePreviewViewController not being autoreleased
https://bugs.webkit.org/show_bug.cgi?id=200325
Summary
WKImagePreviewViewController not being autoreleased
Dean Jackson
Reported
2019-07-31 17:07:04 PDT
WKImagePreviewViewController not being autoreleased
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-07-31 17:07:43 PDT
<
rdar://problem/53788214
>
Dean Jackson
Comment 2
2019-07-31 17:12:44 PDT
Committed
r248085
: <
https://trac.webkit.org/changeset/248085
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug