Cherry-pick r248085. rdar://problem/53825741

WKImagePreviewViewController not being autoreleased
    https://bugs.webkit.org/show_bug.cgi?id=200325
    <rdar://problem/53788214>

    Reviewed by Wenson Hsieh.

    Wenson noticed I wasn't autoreleasing the WKImagePreviewViewController.

    * UIProcess/ios/WKContentViewInteraction.mm:
    (-[WKContentView continueContextMenuInteraction:]):

    Canonical link: https://commits.webkit.org/214111@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248085 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.167@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@248114 268f45cc-cd09-0410-ab3c-d52691b4dbfc